kubernetes/apps/default/home-assistant-hytta/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-hytta
spec:
  selector:
    app: home-assistant-hytta
  ports:
    - name: http
      port: 8123
      targetPort: 8123
    - name: ha-code
      port: 8080
      targetPort: 8080
